--- a/lesson09/src/main/resources/messages_ru.properties
+++ b/lesson09/src/main/resources/messages_ru.properties
@@ -1,1 +1,3 @@
 editor.created.successfully=\u0420\u0435\u0434\u0430\u043A\u0442\u043E\u0440 \u0441\u043E\u0437\u0434\u0430\u043D
+editor.deleted.successfully=\u0420\u0435\u0434\u0430\u043A\u0442\u043E\u0440 deleted.
+editor.updated.successfully=\u0420\u0435\u0434\u0430\u043A\u0442\u043E\u0440 updated.
